--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -9,3 +9,7 @@ add_executable(1009_SalarioComBonus 1009_SalarioComBonus.c)
 add_executable(1017_GastoDeCombustivel 1017_GastoDeCombustivel.c)
 add_executable(1037_Intervalo 1037_Intervalo.c)
 add_executable(1049_Animal 1049_Animal.c)
+add_executable(1005_Media_1 1005_Media_1.c)
+add_executable(1011_Esfera 1011_Esfera.c)
+add_executable(1020_idade_em_dias 1020_idade_em_dias.c)
+add_executable(1036_Formula_De_Bhaskara 1036_Formula_De_Bhaskara.c)
